--- a/public/index.html
+++ b/public/index.html
@@ -12,6 +12,14 @@
   
 </head>
 <body>
-    <p>Ola Mundo</p>
+    <!--navbar-->
+    <nav class="navbar">
+        <img src="img/logo.png" alt="logo" class="logo">
+        <div class="join-box">
+            <p class="join-msg">Séries & Filmes Ilimitados</p>
+            <button class="btn join-btn">Assinar Agora</button>
+            <button class="btn">Entrar</button>
+        </div>
+    </nav>
 </body>
 </html>
