--- a/public/index.html
+++ b/public/index.html
@@ -21,5 +21,23 @@
             <button class="btn">Entrar</button>
         </div>
     </nav>
+
+    <!-- main section -->
+    <header class="main">
+        <h1 class="heading">Filmes</h1>
+        <p class="info">Filmes para assistir com toda a familia</p>
+
+        <!-- movie list -->
+        <div class="movie-list">
+           <h1 class="movie-category">Populares no Netflix</h1>
+
+           <div class="movie-container">
+                <div class="movie">
+                    <img src="img/poster-1.png" alt="Poster">
+                    <p class="movie-title">the witcher</p>
+                </div>
+           </div>
+        </div>
+    </header>
 </body>
 </html>
