--- a/public/index.html
+++ b/public/index.html
@@ -29,6 +29,11 @@
 
         <!-- movie list -->
         <div class="movie-list">
+
+            <button class="pre-btn">
+                <img src="img/prev.png" alt="previous button">
+            </button>
+
            <h1 class="movie-category">Populares no Netflix</h1>
 
            <div class="movie-container">
@@ -37,6 +42,11 @@
                     <p class="movie-title">the witcher</p>
                 </div>
            </div>
+           
+           <button class="next-btn">
+                <img src="img/next.png" alt="next button">
+            </button>
+
         </div>
     </header>
 </body>
