--- a/public/index.html
+++ b/public/index.html
@@ -28,7 +28,7 @@
         <p class="info">Filmes para assistir com toda a familia</p>
 
         <!-- movie list -->
-        <div class="movie-list">
+        <!--<div class="movie-list">
 
             <button class="pre-btn">
                 <img src="img/prev.png" alt="previous button">
@@ -47,7 +47,8 @@
                 <img src="img/next.png" alt="next button">
             </button>
 
-        </div>
+        </div>-->
+
     </header>
     <script src="js/api.js"></script>
     <script src="js/home.js"></script>
