--- a/public/index.html
+++ b/public/index.html
@@ -5,10 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
+    <link rel="icon" type="image/x-icon" href="img/favicon.png">
+
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/style.css">
 
-    <title>NETFLIX: HOME</title>
+    <title>Inicio - Netflix</title>
   
 </head>
 <body>
@@ -52,5 +54,6 @@
     </header>
     <script src="js/api.js"></script>
     <script src="js/home.js"></script>
+    <script src="js/scrool.js"></script>
 </body>
 </html>
